--- a/.github/workflows/ci-cd-frontend.yml
+++ b/.github/workflows/ci-cd-frontend.yml
@@ -1,4 +1,4 @@
-name: vite CI/CD
+name: vite-frontend CI/CD
 
 on:
  push:
@@ -12,8 +12,8 @@ concurrency:
 
 jobs:
   build-and-push:
-  runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-  setps:
-  - name: checkout code
-    uses: actions/checkout@v6
+    steps:
+    - name: checkout code
+      uses: actions/checkout@v6
